--- a/Session1.3/index.html
+++ b/Session1.3/index.html
@@ -250,7 +250,7 @@ Let `\(\partial_i =\)` set of areas adjacent to `\(i\)`, `\(w_{ij}\)`  = 1 for `
 y_i &amp;\sim \text{Poisson}(\lambda_i = \rho_i E_i)\\
 \eta_i &amp;= \log \rho_i = b_0 + v_i + u_i\\
 v_i &amp;\sim \text{Normal}(0, \sigma^2_v)\\
-\mathbf{u} \sim \hbox{ICAR}(\mathbf{W},\sigma^2_u)
+\mathbf{u} &amp;\sim \hbox{ICAR}(\mathbf{W},\sigma^2_u)
 \end{align*}`
 
 - Need to specify hyperprior distributions for:
@@ -368,7 +368,7 @@ where `\(\lambda = \frac{-\log(\alpha_k)}{U}\)`
 
 --
 
-  - A marginal sd equal to 0.5 (we do not want a sd too large);
+  - A marginal sd not too large;
 
 --
 
@@ -376,13 +376,13 @@ where `\(\lambda = \frac{-\log(\alpha_k)}{U}\)`
 
 --
 
-  - `\(\alpha_2=1/3\)` (we expect a higher probability that the variability to be explained by the spatial random effect is lower than 50%)
+  - `\(\alpha_2=2/3\)` (we expect a higher probability that the variability to be explained by the spatial random effect is lower than 50%)
 
 --
 
 - Then 
 
-    1\. `\(U=0.5/0.31\)` translates into `\(P(\sigma_{\tau_b}&gt;1.62) = 0.01\)`, using the rule of thumb in Simpson, Rue, Riebler, et al. (2017)
+    1\. g Assuming `\(U=0.5/0.31\)` translates into `\(P(\sigma_{\tau_b}&gt;1.62) = 0.01\)`, using the rule of thumb in Simpson, Rue, Riebler, et al. (2017)
     
     2\. `\(P(\phi &lt; 0.5) = 2/3\)`
 
@@ -443,7 +443,7 @@ v_i &amp;\sim  \hbox{Normal}(0, \sigma^2_v)\\
 - Parameters of interest: 
   - residual RR `\((\hbox{resRR}_i=\exp(b_i))\)`
   - marginal variance `\((1/ \tau_b)\)`
-  - percent of total variation in the log RR due to spatial effects ($\phi$)
+  - percent of total variation in the log RR due to spatial effects `\((\phi)\)`
   
 ---
 
@@ -577,19 +577,19 @@ To run the model in INLA
 
 ```
   ID        mean         sd  0.025quant    0.5quant  0.975quant mode
-1  1 -0.08510859 0.10811838 -0.30285164 -0.08316609  0.12163230   NA
-2  2 -0.17474960 0.08540456 -0.34589553 -0.17353241 -0.01046923   NA
-3  3 -0.21992757 0.09665094 -0.41408155 -0.21840209 -0.03443214   NA
-4  4  0.12065006 0.08247682 -0.04244733  0.12103823  0.28157094   NA
-5  5 -0.14179327 0.08401160 -0.30909695 -0.14098915  0.02097159   NA
-6  6  0.40357739 0.08256313  0.23961877  0.40423904  0.56387129   NA
+1  1 -0.08510952 0.10811939 -0.30285486 -0.08316692  0.12163309   NA
+2  2 -0.17474998 0.08540538 -0.34589778 -0.17353272 -0.01046816   NA
+3  3 -0.21992750 0.09665180 -0.41408349 -0.21840193 -0.03443054   NA
+4  4  0.12065015 0.08247743 -0.04244836  0.12103829  0.28157238   NA
+5  5 -0.14179292 0.08401198 -0.30909735 -0.14098882  0.02097276   NA
+6  6  0.40357593 0.08256304  0.23961732  0.40423764  0.56386951   NA
            kld
-1 3.915197e-08
-2 6.779956e-08
-3 1.341128e-08
-4 1.655149e-07
-5 1.134616e-07
-6 1.343470e-07
+1 3.915693e-08
+2 6.780423e-08
+3 1.341278e-08
+4 1.655222e-07
+5 1.134656e-07
+6 1.343781e-07
 ```
 
 which is a matrix formed by `\(2n\)` rows: 
@@ -807,7 +807,7 @@ Straightforward extension of disease mapping model:
   
 `\begin{align*}
 \hbox{y}_i &amp; \sim  \hbox{Poisson}(E_i \rho_i); \;\;\; i=1,...,N\\
-\log \lambda_i &amp; =  b_0 + \class{red}{\beta_1 x_i} + u_i + v_i\\
+\log \rho_i &amp; =  b_0 + \class{red}{\beta_1 x_i} + u_i + v_i\\
 \text{residual RR}_i &amp;= \exp(b_i) = \exp(u_i + v_i)\\
 \boldsymbol{b} &amp;= \frac{1}{\sqrt{\tau_b}}(\sqrt{1-\phi}\boldsymbol{v}_{*} + \sqrt{\phi} \boldsymbol{u}_{*})\\ 
 v_i &amp;\sim \text{Normal}(0, \sigma^2_v) \;\;\; \mathbf{u} \sim \hbox{ICAR}(\mathbf{W},\sigma^2_u)
@@ -909,7 +909,7 @@ where
 
 &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt;
 
-- `\(\exp(u_i + v_i)\)` is the residual or adjusted relative risk of disease/death
+- `\(\exp(b_i)\)` is the residual or adjusted relative risk of disease/death
    in area `\(i\)` after accounting for the effects of measured covariates and the overall mean risk
  
 ---
@@ -937,7 +937,7 @@ where
 
 &lt;span style="display:block; margin-top: 10px ;"&gt;&lt;/span&gt;
 
-- When combined with data on geographical variations in exposure, disease mapping techniques can be used to investigate and quantify *ecological} associations between disease risk and potential exposures
+- When combined with data on geographical variations in exposure, disease mapping techniques can be used to investigate and quantify **ecological** associations between disease risk and potential exposures
 
 ---
 
